Fixed a bug todo with the login process and created a custom scrollbar

--- a/app/style.css
+++ b/app/style.css
@@ -38,3 +38,15 @@ div {
 *:focus {
 	outline: none;
 }
+
+/*
+*	Scrollbar
+*/
+::-webkit-scrollbar {
+	width: 8px;
+	background: rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+	background: rgba(0, 0, 0, 0.3);
+}
